Use env variables for database config and prepare for Render deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,56 +1,67 @@
-# ============================
-# Spring Boot App Name
-# ============================
 spring.application.name=back
 
-# ============================
-# Database Configuration (Railway)
-# ============================
+#just added the server database credentials
+# Database connection
 spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?useSSL=false&serverTimezone=UTC
 spring.datasource.username=${MYSQLUSER}
 spring.datasource.password=${MYSQLPASSWORD}
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ============================
-# JPA Configuration
-# ============================
-spring.jpa.hibernate.ddl-auto=update
+# JPA / Hibernate settings
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.format_sql=true
 
-# ============================
-# Admin Panel Login
-# ============================
+
+# Admin panel
 spring.security.user.name=admin
 spring.security.user.password=1234
 
-# ============================
-# Server Port
-# ============================
+# Server Configuration
 server.port=8080
 
-# ============================
-# Logging
-# ============================
 logging.level.org.springframework.security=DEBUG
 
-# ============================
 # JWT Configuration
-# ============================
 jwt.secret=16QwLXpWPnBwUgQ7r6tMB/aluQ35HJjkw7pDDuQciiw=
 jwt.expiration.ms=3600000
 
-# ============================
-# Email SMTP (Mailtrap)
-# ============================
+# ==================================
+# SPRING MAIL (SMTP) CONFIGURATION
+# ==================================
+# Replace with your actual email service provider details.
+# Example: Using Gmail SMTP for sending emails.
+# IMPORTANT: For Gmail, you will likely need to generate an "App password"
+# from your Google Account security settings if 2-Step Verification is enabled.
+# Regular passwords often do not work for SMTP access.
+
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=963e97ac1bc77c
-spring.mail.password=d67e91f0a1bad9
+
+# Your email address (the sender's email)
+spring.mail.username=c4d47310b1e0af
+
+#protocol for sending email
 spring.mail.protocol=smtp
+
+# Your email password or generated App Password
+spring.mail.password=5890741c4e4131
+
 spring.mail.properties.mail.smtp.auth=true
+# Enable authentication
 spring.mail.properties.mail.smtp.starttls.enable=true
+# Enable STARTTLS for secure connection
+# spring.mail.properties.mail.smtp.starttls.required=true # Often not needed if starttls.enable is true
+# spring.mail.properties.mail.smtp.connectiontimeout=10000 # Optional: connection timeout in ms
+# spring.mail.properties.mail.smtp.timeout=10000           # Optional: read timeout in ms
+# spring.mail.properties.mail.smtp.writetimeout=10000      # Optional: write timeout in ms
+
+# Optional: Set to true to test connection on application startup
+# spring.mail.test-connection=true
+
+#for mail sender address
+spring.mail.from=no-reply@aeromatx.com
 
 # ============================
 # Twilio SMS Config
