--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,13 @@ spring.application.name=back
 
 #just added the server database credentials
 # Database connection
-spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?useSSL=false&serverTimezone=UTC
-spring.datasource.username=${MYSQLUSER}
-spring.datasource.password=${MYSQLPASSWORD}
-
+spring.datasource.url=jdbc:mysql://ballast.proxy.rlwy.net:34245/railway
+spring.datasource.username=root
+spring.datasource.password=RGIkgUfSrcYVEvLGuwvMIGBCEHzbKEUo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate settings
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
@@ -62,15 +61,3 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #for mail sender address
 spring.mail.from=no-reply@aeromatx.com
-
-# ============================
-# Twilio SMS Config
-# ============================
-# ============================
-# Twilio SMS Config
-# ============================
-twilio.account.sid=${TWILIO_ACCOUNT_SID}
-twilio.auth.token=${TWILIO_AUTH_TOKEN}
-twilio.verify.sid=${TWILIO_VERIFY_SID}
-twilio.phone.number=${TWILIO_PHONE_NUMBER}
-
